* ucs-ec2-create: upon creating a windows vm instead of an initial connect   ports 139 and 445 are scanned to se if vm is reachable (Bug #35850) * utils.sh: added function install_ucs_windows_tools (Bug #35854)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53604 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/control
+++ b/test/ucs-ec2-tools/debian/control
@@ -12,6 +12,7 @@ Architecture: all
 Depends: ${misc:Depends},
  python-boto (>> 2.2.2),
  python-paramiko,
+ python-nmap,
  python
 Description: Tools to create test environments via EC2
  This package contains various command line tools
