Bug #35406 DVD: Include (non-)free firmware files on DVD
Will dynamically update the task list containing the available firmware
and microcode files.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53640 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -140,7 +140,7 @@ export CONTRIB=0
 # Do I want to force (potentially non-free) firmware packages to be
 # placed on disc 1? Will make installation much easier if systems
 # contain hardware that depends on this firmware
-# export FORCE_FIRMWARE=1
+export FORCE_FIRMWARE=1
 
 # If you have a $MIRROR/dists/$CODENAME/local/binary-$ARCH dir with 
 # local packages that you want to put on the CD set then
