* Bug #35764: Included patch for debugging problems
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53649 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-dojo/Makefile
+++ b/management/univention-dojo/Makefile
@@ -54,6 +54,7 @@ dojo: dojo-*.tar.gz
 	tar -xzf $<
 	[ ! -d $@ ] && mv $@*/ $@ || true
 	cd dojo; \
+	patch -p1 < ../fix_domReady_console_error.patch && \
 	patch -p1 < ../fix_bashism.patch && \
 	patch -p1 < ../fix_grid_focus.patch && \
 	patch -p1 < ../fix_standbyOpacity.patch && \
