Bug #35921 USS: Show debconf title while starting USS
Add debconf progress bar to show that Univention System Setup is being
started in the background.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53655 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/rules
+++ b/base/univention-system-setup/debian/rules
@@ -58,3 +58,7 @@ override_dh_auto_test:
 
 %:
 	dh $@ --with 'python_support'
+
+
+po/templates.pot: po/POTFILES.in
+	debconf-updatepo --msgid-bugs-address='Univention GmbH <packages@univention.de>'
