* ucs-test-modules-all: added dependency to ucs-test-udm-   customattribute, ucs-test-udm-groups, ucs-test-udm-printers and   ucs-test-udm-syntax (Bug #32934)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53719 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -454,17 +454,19 @@ Depends:
  ucs-test-updater,
  ucs-test-udm-extendedattribute,
  ucs-test-udm-extensions,
-# ucs-test-udm-customattribute,
+ ucs-test-udm-customattribute,
  ucs-test-udm-dhcp,
 # ucs-test-dhcp,
  ucs-test-nagios,
 # ucs-test-apache,
 # ucs-test-udm-general,
  ucs-test-udm-users,
-# ucs-test-udm-groups,
+ ucs-test-udm-groups,
+ ucs-test-udm-printers,
 # ucs-test-system-setup,
  ucs-test-udm-net,
  ucs-test-udm-settings,
+ ucs-test-udm-syntax,
  ucs-test-ucr,
  ucs-test-adconnector,
  ucs-test-appcenter,
