* Bug #34765: rewrite * add i18n support
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53742 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-diagnostic/debian/control
+++ b/management/univention-management-console-module-diagnostic/debian/control
@@ -15,8 +15,7 @@ Architecture: all
 Depends: ${misc:Depends},
  univention-management-console-server,
  devscripts
-Description: Support health
- Support health
+Description: System Diagnosis UMC module
  .
  It is part of Univention Corporate Server (UCS), an
  integrated, directory driven solution for managing
