--- a/doc/errata/staging/2014-09-12-univention-xen-gplpv.yaml
+++ b/doc/errata/staging/2014-09-12-univention-xen-gplpv.yaml
@@ -6,6 +6,7 @@ fix: 11.0.373-1.14.201409171802
 version: [2,3]
 desc: |
   This update fixes the following issue:
-  * The code signing certificate expired and has been replaced
-    with a new certificate valid until 10.10.2017.
+  * The code signing certificate for the GPLPV drivers expired and 
+    has been replaced with a new certificate valid until 10.10.2017. 
+    The new driver version is 0.11.0.373
 bug: [35849]
