--- a/desktop/univention-kde/debian/control
+++ b/desktop/univention-kde/debian/control
@@ -11,7 +11,7 @@ Package: univention-kde
 Architecture: all
 Recommends: kde-l10n-de,
  okular,
- kdm,
+ univention-kdm,
  univention-mozilla-firefox,
  univention-x-core
 Depends: ${misc:Depends},
