Bug #33397 GRUB: Remove old UEFI code
Debian Installer does the right thing when installing on EFI™.
Remove double UCS/Univention entry in EFI Boot Manager.
Remove trailing blanks and empty lines.
Replace deprecated dict.has_key() with 'key' in 'dict'.
Remove UCRV grub/vga.
Remove UCS-3 transition code.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53793 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/control
+++ b/base/univention-grub/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper,
 Package: univention-grub
 Architecture: all
 Depends: ${misc:Depends},
- grub-pc | univention-uefi | univention-uefi-secureboot,
+ grub-pc | grub-efi | univention-uefi-secureboot,
  initramfs-tools,
  lvm2,
  memtest86+,
@@ -22,4 +22,3 @@ Description: UCS - meta package for the Grub2 configuration
  an integrated, directory driven solution for managing
  corporate environments. For more information about UCS,
  refer to: http://www.univention.de/
-
