new kde default wallpaper (Bug #35936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53810 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-kde/debian/control
+++ b/desktop/univention-kde/debian/control
@@ -11,7 +11,6 @@ Package: univention-kde
 Architecture: all
 Recommends: kde-l10n-de,
  okular,
- univention-kdm,
  univention-mozilla-firefox,
  univention-x-core
 Depends: ${misc:Depends},
@@ -19,7 +18,8 @@ Depends: ${misc:Depends},
  univention-config-registry,
  univention-directory-manager-tools,
  kde-standard (>= 5:66),
- univention-kde-setdirs
+ univention-kde-setdirs,
+ univention-kdm,
 Description: UCS - KDE desktop
  This package installs the KDE desktop.
  .
