made TLS Forward Secrecy more visible/configurable (Bug #35923)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53822 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/control
+++ b/mail/univention-mail-postfix/debian/control
@@ -16,7 +16,8 @@ Depends: ${misc:Depends},
  libpam-univentionmailcyrus,
  univention-base-files,
  univention-config-registry (>= 7.0.31-1),
- python-univention-lib (>= 3.0.4-1)
+ python-univention-lib (>= 3.0.4-1),
+ openssl
 Conflicts: univention-mail,
  exim4,
  exim4-base,
