--- a/base/univention-system-setup/debian/rules
+++ b/base/univention-system-setup/debian/rules
@@ -60,5 +60,5 @@ override_dh_auto_test:
 	dh $@ --with 'python_support'
 
 
-po/templates.pot: po/POTFILES.in
-	debconf-updatepo --msgid-bugs-address='Univention GmbH <packages@univention.de>'
+debian/po/templates.pot: debian/po/POTFILES.in
+	cd debian && debconf-updatepo --msgid-bugs-address='Univention GmbH <packages@univention.de>'
