* utils.sh:    promote_ad_win is now using python / ps scripts from    ucs-windows-tools    added function to shutdown remote windows host    removed unneeded functions    (Bug #35855) * adjusted examples/jenkins/autotest-220-ad-win2k8-master.cfg   (Bug #35913)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53884 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-220-ad-win2k8-master.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-220-ad-win2k8-master.cfg
@@ -34,7 +34,7 @@ ec2_subnet_id: subnet-f452539c
 profile:
  hostname="admember220"
  domainname="autotest220.local"
- windows/domain="AUTOTEST120"
+ windows/domain="AUTOTEST220"
  ldap/base="dc=autotest001,dc=local"
  root_password="univention"
  locale/default="de_DE.UTF-8:UTF-8"
@@ -54,12 +54,13 @@ command4:
  . utils.sh; install_ucs_test
  . utils.sh; install_ucs_windows_tools
 command5:
- . utils.sh; promote_ad_w2k8 [win2k8r2120_IP] autotest220.local AUTOTEST220
+ . utils.sh; promote_ad_w2k8 [win2k8r2220_IP] autotest220.local
 command6:
  #
 command7:
  #
 command8:
+ . utils.sh; shutdown_windows_host [win2k8r2220_IP]
  halt -p
 files:
  ~/ec2/license/autotest091.ldif /root/
