--- a/test/winexe/debian/control
+++ b/test/winexe/debian/control
@@ -23,7 +23,17 @@ Build-Depends: debhelper,
 
 Package: winexe
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: libc6 (>= 2.8),
+ libdcerpc0 (>= 2:4.1.0-1.653.201408041143),
+ libndr-standard0 (>= 2:4.1.0-1.653.201408041143),
+ libndr0 (>= 2:4.1.0-1.653.201408041143),
+ libpopt0 (>= 1.16),
+ libsamba-credentials0 (>= 2:4.1.0-1.653.201408041143),
+ libsamba-hostconfig0 (>= 2:4.1.0-1.653.201408041143),
+ libsamba-util0 (>= 2:4.1.0-1.653.201408041143),
+ libsmbclient-raw0 (>= 2:4.1.0-1.653.201408041143),
+ libtalloc2 (>= 2.0.4~git20101213),
+ libtevent0 (>= 0.9.9)
 Description: Remote Windows®-command executor
  Winexe remotely executes commands on Windows® NT/2000/XP/2003 systems.
  .
