--- a/kernel/univention-kernel-image/debian/control
+++ b/kernel/univention-kernel-image/debian/control
@@ -8,7 +8,32 @@ Standards-Version: 3.8.2
 Package: univention-kernel-image
 Architecture: any
 Pre-Depends: univention-initrd, module-init-tools
-Depends: linux-image-${F:KernelVersion}, univention-initrd (>= 6.0.0-2), xfsprogs, libc6-i686 [i386], univention-config 
+Depends: linux-image-${F:KernelVersion},
+ univention-initrd (>= 6.0.0-2),
+ xfsprogs,
+ libc6-i686 [i386],
+ univention-config,
+Recommends:
+ firmware-adi,
+ firmware-atheros,
+ firmware-bnx2,
+ firmware-bnx2x,
+ firmware-brcm80211,
+ firmware-intelwimax,
+ firmware-ipw2x00,
+ firmware-ivtv,
+ firmware-iwlwifi,
+ firmware-libertas,
+ firmware-linux,
+ firmware-linux-free,
+ firmware-linux-nonfree,
+ firmware-myricom,
+ firmware-netxen,
+ firmware-qlogic,
+ firmware-ralink,
+ firmware-realtek,
+ firmware-samsung,
+ firmware-ti-connectivity,
 Description: UCS - Linux kernel (standard)
  This meta-package depends on the latest UCS kernel image. It supports up to
  64 GB RAM on 32 bit CPUs and up to 128 TB memory on 64 bit CPUs.
@@ -23,7 +48,32 @@ Description: UCS - Linux kernel (standard)
 Package: univention-kernel-image-486
 Architecture: any
 Pre-Depends: univention-initrd, module-init-tools
-Depends: linux-image-${F:KernelVersion486}, univention-initrd (>= 6.0.0-2), xfsprogs, libc6-i686 [i386], univention-config 
+Depends: linux-image-${F:KernelVersion486},
+ univention-initrd (>= 6.0.0-2),
+ xfsprogs,
+ libc6-i686 [i386],
+ univention-config,
+Recommends:
+ firmware-adi,
+ firmware-atheros,
+ firmware-bnx2,
+ firmware-bnx2x,
+ firmware-brcm80211,
+ firmware-intelwimax,
+ firmware-ipw2x00,
+ firmware-ivtv,
+ firmware-iwlwifi,
+ firmware-libertas,
+ firmware-linux,
+ firmware-linux-free,
+ firmware-linux-nonfree,
+ firmware-myricom,
+ firmware-netxen,
+ firmware-qlogic,
+ firmware-ralink,
+ firmware-realtek,
+ firmware-samsung,
+ firmware-ti-connectivity,
 Description: UCS - Linux kernel (for old systems)
  This meta-package depends on the latest UCS kernel image compatible
  with older 32 bit CPUs. The standard kernel in UCS for i386 requires
