* Bug #35654: version bump
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54036 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/stylus/debian/control
+++ b/management/stylus/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper, 
  npm,
+ ucslint,
  nodejs-legacy
 Standards-Version: 3.7.2
 
