Bug #35654: adjust package dependencies file to allow updates from UCS 3.x
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54057 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/control
+++ b/management/univention-management-console-frontend-theme/debian/control
@@ -12,6 +12,8 @@ Build-Depends: debhelper (>= 7.0.50~),
 Package: univention-management-console-frontend-theme
 Architecture: all
 Depends: ${misc:Depends}
+Breaks: univention-management-console-frontend (<< 4.0.0)
+Replaces: univention-management-console-frontend (<< 4.0.0)
 Description: Univention Management Console - theme data
  This package contains CSS and graphic theme data for UMC
  .
