* Bug #34765: add univention-management-console-module-diagnostic to the recommended UMC modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54095 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/control
+++ b/management/univention-management-console/debian/control
@@ -30,6 +30,7 @@ Depends: ${misc:Depends},
  univention-management-console-module-sysinfo,
  univention-management-console-module-appcenter,
  univention-management-console-module-apps,
+ univention-management-console-module-diagnostic,
 Recommends:
  univention-management-console-module-quota
 Description: UCS Management Console - Web based computer administration tool
