* python-univention-lib: added a dependency to python-imaging   (Bug #36037)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54134 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/control
+++ b/base/univention-lib/debian/control
@@ -19,7 +19,8 @@ Depends: ${python:Depends},
  dnsutils,
  python-ldb,
  python-samba,
- python-ldap
+ python-ldap,
+ python-imaging
 Provides: ${python:Provides}
 Description: UCS - common scripting functions for Python scripts
  This package contains Python functions used by various
