--- a/management/univention-management-console-module-diagnostic/debian/control
+++ b/management/univention-management-console-module-diagnostic/debian/control
@@ -6,7 +6,10 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-support,
  univention-management-console-dev,
  python-all,
- ucslint
+ ucslint,
+ python-pycurl,
+ python-psutil,
+ python-dnspython
 Standards-Version: 3.7.2
 XS-Python-Version: 2.6, 2.7
 
