Bug #36045 test: Add explicit dependency on fakeroot
fakeroot is no longer on the trigger list for ucs_4.0-0 and thus not
installed as a recommends by default any longer.

As fakeroot is used by univention.testing.debian_package add it as a
dependency for ucs-test-framework.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54191 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -32,6 +32,7 @@ Depends: univention-config,
  ucs-test-modules-all | ucs-test-module,
  dpkg-dev,
  debhelper,
+ fakeroot,
  ${python:Depends},
  ${misc:Depends}
 Description: UCS test environment
