Bug #35656 UVMM: Drop Xen support
Remove all Xen specific cases.

Only depend on libvirt-client-tools instead of the transition package
libvirt-bin, which also pulls in libvirt-daemon, which is not needed on
the management host.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54231 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/control
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/control
@@ -25,7 +25,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  univention-management-console-module-uvmm (= ${source:Version}),
  shell-univention-lib (>= 1.0.25-1),
  python-univention-lib (>= 1.0.25-1)
-Recommends: libvirt-bin,
+Recommends: libvirt-clients,
  univention-nagios-uvmmd
 Description: UCS Virtual Machine Manager Daemon
  This package contains the UCS Virtual Machine Manager Daemon
