shim: apply patches (Bug #35914)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54234 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/shim/debian/rules
+++ b/base/shim/debian/rules
@@ -28,7 +28,7 @@
 # <http://www.gnu.org/licenses/>.
 
 %:
-	dh $@
+	dh $@ --with quilt
 
 override_dh_auto_build:
 	dh_auto_build -- VENDOR_CERT_FILE=univention-uefi-ca.cer
