shim: build-depends (Bug #35914)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54235 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/shim/debian/control
+++ b/base/shim/debian/control
@@ -2,7 +2,7 @@ Source: shim
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
-Build-Depends: debhelper (>= 7.0), gnu-efi (>= 3.0q), sbsigntool, libnss3-tools, quilt
+Build-Depends: debhelper (>= 7.0), gnu-efi (>= 3.0q), sbsigntool, libnss3-tools, quilt, openssl
 Standards-Version: 3.7.3
 
 Package: shim
