Bug #34437 Kernel: Recommend CPU microcode updates
Recommend packages providing microcode updates for ADM and Intel CPUs.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54278 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/control
+++ b/kernel/univention-kernel-image/debian/control
@@ -32,6 +32,8 @@ Recommends:
  firmware-realtek,
  firmware-samsung,
  firmware-ti-connectivity,
+ amd64-microcode,
+ intel-microcode,
 Description: UCS - Linux kernel (standard)
  This meta-package depends on the latest UCS kernel image. It supports up to
  64 GB RAM on 32 bit CPUs and up to 128 TB memory on 64 bit CPUs.
@@ -70,6 +72,8 @@ Recommends:
  firmware-realtek,
  firmware-samsung,
  firmware-ti-connectivity,
+ amd64-microcode,
+ intel-microcode,
 Description: UCS - Linux kernel (for old systems)
  This meta-package depends on the latest UCS kernel image compatible
  with older 32 bit CPUs. The standard kernel in UCS for i386 requires
