--- a/virtualization/univention-kvm-virtio/debian/control
+++ b/virtualization/univention-kvm-virtio/debian/control
@@ -9,9 +9,9 @@ Standards-Version: 3.8.2
 
 Package: univention-kvm-virtio
 Architecture: all
-Description: UCS - KVM virtio windows driver
- This packages provides a cdrom and a floppy image
- with virtio windows driver.
+Description: UCS - KVM VirtIO windows driver
+ This packages provides a CDROM and a floppy image
+ with VirtIO windows driver.
  .
  It is part of Univention Corporate Server (UCS), an
  integrated, directory driven solution for managing
