* Bug #35654: split icons into different files according to size black/white
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54316 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/Makefile
+++ b/management/univention-management-console-frontend-theme/Makefile
@@ -58,6 +58,9 @@ tmp: $(REPO)
 	mv $(TMP_THEME_DIR)/claro.css $(TMP_THEME_CSS)
 	# replace '.claro' selector with '.umc'
 	sed -i 's/\.claro\>/.umc/g;' $$(find $(TMP_THEME_DIR) -name '*.styl' -o -name '*.css')
+	for isvg in icons icons-small; do \
+		sed 's/\#282828/\#ffffff/g' $(TMP_THEME_DIR)/images/$$isvg.svg > $(TMP_THEME_DIR)/images/$$isvg-white.svg; \
+	done
 
 css:
 	mkdir css
@@ -90,7 +93,7 @@ $(BOOSTRAP_FILE): bootstrap.zip
 
 build: css/umc.css css/fonts
 
-build-dev: tmp css $(BOOSTRAP_FILE) css/fonts
+build-dev: tmp css $(BOOSTRAP_FILE)
 	cp -r $(TMP_THEME_DIR)/* css
 	cd css; stylus -m .
 	cd css/form; stylus -m .
