--- a/doc/errata/staging/2014-10-10-xen-4.1.yaml
+++ b/doc/errata/staging/2014-10-10-xen-4.1.yaml
@@ -1,13 +1,10 @@
 product: ucs
 release: "3.2"
-version: [1, 2, 3]
+version: [0, 1, 2, 3]
 scope: ucs_3.2-0-errata3.2-3
 src: xen-4.1
 fix: 4.1.3-16.41.201410101644
 desc: |
- There are two out-of-bounds array accesses in the bash parser,
- which were revealed in Red Hat's internal analysis for these issues and
- also independently reported by Todd Sabin:
  There were multiple security issues discovered in Xen:
  * Information leak through outs instruction emulation (CVE-2013-4368)
  * use-after-free in xc_cpupool_getinfo() (CVE-2014-1950)
