--- a/doc/errata/staging/2014-09-22-univention-mail-postfix.yaml
+++ b/doc/errata/staging/2014-09-22-univention-mail-postfix.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-mail-postfix
-fix: 8.0.13-5.223.201409231059
+fix: 8.0.13-6.227.201410131336
 version: [3,2]
 desc: |
   Several UCR varibales have been added to univention-mail-postfix
@@ -15,8 +15,10 @@ desc: |
   * mail/postfix/smtpd/tls/loglevel
   * mail/postfix/smtp/tls/loglevel
   * mail/postfix/cron/recreate/dh/parameter
-  During installation univention-mail-postfix now creates a set of
-  DH parameter files for EDH ciphers to use instead of the built-in
-  parameters and the cronjob /etc/cron.d/univention-mail-postfix has
-  been added to daily recreate the DH parameter files.
+  During installation and this update univention-mail-postfix creates 
+  a set of DH parameter files for EDH ciphers to use instead of the built-in
+  parameters. Also, a cronjob /etc/cron.d/univention-mail-postfix has been
+  added to weekly recreate the DH parameter files (creating/recreating
+  these parameter files can take a while, depending on the quality of
+  the systems random source).
 bug: [35923]
