* Bug #35550: Fix localization of python setup scripts * Bug #35653: Add smbclient to list of dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54368 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -63,6 +63,7 @@ Depends: ${misc:Depends},
  openbox,
 Recommends: firefox-en | firefox-de | firefox | iceweasel,
  xinit,
+ smbclient,
  univention-kernel-image,
 Replaces: univention-setup-boot, univention-system-setup-appliance
 Description: Starting univention-system-setup on next boot
