* examples/jenkins/autotest-220-ad-win2k8-master.cfg:    now setting gateway on windows host    added ~/ec2/scripts/activate-3.2-errata-test-scope.sh to file list and    changed upgrade_to_latest_errata to upgrade_to_latest_test_errata    added execution of ad-join.py    added execution of ucs-test    (Bug #35913)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54372 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-220-ad-win2k8-master.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-220-ad-win2k8-master.cfg
@@ -1,6 +1,6 @@
 [Global]
 # These settings can be overwritten by the instance
-logfile: addomain-120-win2k8.log
+logfile: addomain-120-win2k8-master.log
 
 # AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 4 - ami-3c34e84b
 ec2_ami: ami-3c34e84b
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_errata
+ . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
  reboot
  LOCAL sleep 120 
@@ -56,16 +56,19 @@ command4:
 command5:
  . utils.sh; promote_ad_w2k8 [win2k8r2220_IP] autotest220.local
 command6:
- #
+ . utils.sh; set_gateway [master220_IP]
+ . /root/ad-join.py -u Administrator -p Univention@99 -D [win2k8r2220_IP] -A Administrator -P Univention@99
 command7:
- #
+ . utils.sh; run_tests
 command8:
  . utils.sh; shutdown_windows_host [win2k8r2220_IP]
  halt -p
 files:
  ~/ec2/license/autotest220.ldif /root/
  examples/jenkins/utils/utils.sh /root/
+ examples/jenkins/utils/ad-join.py /root/
  ~/ec2/license/license.secret /etc/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh
 
 [win2k8r2220]
 # AMI: Windows Server 2008 R2 Englisch ami-a1d607d6
