--- a/doc/errata/staging/2014-10-15-univention-ad-connector.yaml
+++ b/doc/errata/staging/2014-10-15-univention-ad-connector.yaml
@@ -2,10 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-ad-connector
-fix: 8.0.17-73.449.201410150646
+fix: 8.0.17-74.451.201410150732
 version: [3]
 desc: |
   * The password synchronization can now be disabled by setting the
     UCR variable 'connector/ad/mapping/user/password/disabled' to
     'true'.
-bug: [35895]
+  * A connection traceback has been fixed in the AD member mode wizard.
+bug: [35895,35701]
