* [WIP] Bug #36095: fix footer and include rules for category buttons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54481 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/Makefile
+++ b/services/univention-apache/Makefile
@@ -40,7 +40,7 @@ buildBootstrap:=$(buildCssDir)/bootstrap.css
 build: l10n $(buildDir)
 
 build-dev: $(buildCssDir) $(buildBootstrap)
-	mkdir -p build
+	mkdir -p build $(buildJsDir)
 	cp -r www build
 	# symlink UCS javascript code
 	[ -e $(buildJsDir)/ucs ] || cp -frsn $(CURDIR)/js/ucs $(buildJsDir)/ucs
