* [WIP] Bug #36095: add background image with translucent pattern
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54483 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/Makefile
+++ b/services/univention-apache/Makefile
@@ -70,7 +70,8 @@ $(buildCssDir):
 	mkdir -p $@
 	stylus -o $@ css
 	cp css/ucs.css $@
-	# Workaround: mark several commands as comments (/*TMP ... */) 
+	cp -r css/images $@
+	# Workaround: mark several commands as comments (/*TMP ... */)
 	# to avoid parse errors with stylus
 	sed -i 's/.*\(^\s\+#\|filter: alpha\|filter:\|top: expression\).*/\/\*TMP\0\*\//; /\/\*TMP/ { s|/\*[^*]*\*/\*/|*/| }' $$(find $@ -name "*.css")
 	# compile all .css files into one big file
