--- a/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
@@ -59,7 +59,7 @@ command5:
  . utils.sh; run_test
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:/var/log/univention/connector* .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:/var/log/samba/* .
 command6:
