--- a/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
@@ -93,7 +93,7 @@ command6:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:/var/log/univention/connector* .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:/var/log/samba/* .
 command7:
