--- a/test/ucs-ec2-tools/examples/jenkins/autotest-074-update-3.2-to-4.0-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-074-update-3.2-to-4.0-slave-s3.cfg
@@ -93,7 +93,7 @@ command6:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
 command7:
  halt -p
 files:
