--- a/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.2-to-4.0-appupdate-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.2-to-4.0-appupdate-master-s4.cfg
@@ -64,7 +64,7 @@ command7:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:/var/log/univention/connector* .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:/var/log/samba/* .
 command8:
