--- a/test/ucs-ec2-tools/examples/jenkins/autotest-113-update-3.2-to-4.0-appupdate-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-113-update-3.2-to-4.0-appupdate-backup-s4.cfg
@@ -104,7 +104,7 @@ command8:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:/var/log/univention/connector* .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:/var/log/samba/* .
 command9:
