--- a/test/ucs-ec2-tools/examples/jenkins/autotest-114-update-3.2-to-4.0-appupdate-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-114-update-3.2-to-4.0-appupdate-slave-s3.cfg
@@ -103,7 +103,7 @@ command8:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave114_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave114_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave114_IP]:"/var/log/univention/{join,setup,listener}.log" .
+ LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave114_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
 command9:
  halt -p
 files:
